--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+  outline: none;
+  list-style: none;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --bg-color: #ECEBEB;
+  --main-color: #abd2b5;
+  --color-1: #85AD90;
+  --color-2: #32904B;
+  --color-3: #A64639;
+  --color-4: #F0CD69;
+  --txt-1: #A7A7A7;
+  --txt-2: #2F7585;
+  --txt-3: #F7F7F7;
+  --block: #F7F7F7;
+  --user-font-color: #A64639;
+}
+
+body {
+  background-color: var(--bg-color);
+}
+
+.wrapper {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  padding-bottom: 100px;
 }
