--- a/src/components/ProfilePage/UserBar/UserBar.module.css
+++ b/src/components/ProfilePage/UserBar/UserBar.module.css
@@ -1,4 +1,4 @@
-.sideBar {
+.userBar {
     max-width: 400px;
     flex-grow: 1;
     padding: 0 20px;
@@ -6,7 +6,7 @@
 }
 
 @media (max-width: 900px) {
-    .sideBar {
+    .userBar {
         max-width: 600px;
         min-width: 370px;
         margin: 0 auto;
