--- a/src/components/DialoguesPage/Chat/MsgArea/MsgArea.module.css
+++ b/src/components/DialoguesPage/Chat/MsgArea/MsgArea.module.css
@@ -18,6 +18,7 @@
     max-height: 100%;
     overflow: auto;
     padding: 0 30px;
+    padding-top: 20px;
 }
 .feed::-webkit-scrollbar { 
     width: 5px;
