disabled button refactoring

--- a/src/components/UsersPage/UserCard/UserCard.module.css
+++ b/src/components/UsersPage/UserCard/UserCard.module.css
@@ -40,6 +40,11 @@
     background-color: var(--color-2);
 }
 
+.disabled {
+    background: rgb(73, 73, 73);
+    color: rgb(128, 128, 128);
+}
+
 .rightSide {
     flex-grow: 1;
     display: flex;
