--- a/src/components/DialoguesPage/Chat/SendArea/SendArea.module.css
+++ b/src/components/DialoguesPage/Chat/SendArea/SendArea.module.css
@@ -3,7 +3,6 @@
     background: var(--block);
     padding: 10px 30px;
     display: flex;
-    align-items: flex-end;
 }
 
 .txtarea {
@@ -19,7 +18,6 @@
     color: #6e6e6e;
     padding: 7px 50px 7px 10px;
     box-sizing: border-box;
-    margin-right: 15px;
 }
 
 .btn {
@@ -27,6 +25,7 @@
     height: 40px;
     background: url(./send.png) no-repeat center center / contain;
     cursor: pointer;
+    margin-left: 15px;
 }
 
 @media (max-width: 1240px) {
