--- a/src/components/ProfilePage/Wall/Info/Info.module.css
+++ b/src/components/ProfilePage/Wall/Info/Info.module.css
@@ -15,6 +15,7 @@
     color: var(--txt-2);
     font-size: 20px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 .key {
@@ -30,4 +31,13 @@
     color: var(--txt-1);
     font-size: 20px;
     font-style: italic;
+}
+
+.input {
+    padding: 10px 20px;
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: var(--color-1);
 }
