--- a/src/components/ProfilePage/Wall/Posts/PostCreator/PostCreator.module.css
+++ b/src/components/ProfilePage/Wall/Posts/PostCreator/PostCreator.module.css
@@ -11,13 +11,12 @@
 }
 
 .textarea {
-    flex-grow: 1;
-    padding: 5px 15px 15px 15px;
-    font-size: 18px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+    width: 100%;
     resize: none;
+    font-size: 18px;
     color: rgb(51, 51, 51);
+    padding: 5px 15px 15px 15px;
+    border-radius: 8px;
 }
 
 .btn {
@@ -29,4 +28,5 @@
     cursor: pointer;
     background-color: var(--main-color);
     color: white;
+    margin-top: 15px;
 }
